# jaxmat

./: .buildinfo  .buildinfo.bak  .gitignore  CITATION.cff  README.md  computational (conflicted copy 2025-11-14 085632).html  computational.html  concepts (conflicted copy 2025-11-14 085632).html  concepts.html  genindex (conflicted copy 2025-11-14 085633).html  genindex.html  identification (conflicted copy 2025-11-14 085633).html  identification.html  index (conflicted copy 2025-11-14 085633).html  index.html  ml_models (conflicted copy 2025-11-14 085633).html  ml_models.html  models.html  objects.inv  pheno_models (conflicted copy 2025-11-14 085633).html  pheno_models.html  py-modindex (conflicted copy 2025-11-14 085633).html  py-modindex.html  pyproject.toml  pytrees (conflicted copy 2025-11-14 085633).html  pytrees.html  search (conflicted copy 2025-11-14 085634).html  search.html  searchindex (conflicted copy 2025-11-14 085634).js  searchindex.js  setup.cfg  setup.py  sharp_bits (conflicted copy 2025-11-14 085633).html  sharp_bits.html  tensors (conflicted copy 2025-11-14 085633).html  tensors.html
_modules/: index (conflicted copy 2025-11-14 085634).html  index.html  jaxmat.html
_sources/: computational.md  pytrees.md
api/: api.html  elasticity.html  jaxmat.html  jaxmat.loader (conflicted copy 2025-11-14 085632).html  jaxmat.loader.html  jaxmat.materials (conflicted copy 2025-11-14 085632).html  jaxmat.materials.behavior (conflicted copy 2025-11-14 085632).html  jaxmat.materials.behavior.html  jaxmat.materials.damage.html  jaxmat.materials.elasticity.html  (+44 more)
(+299 files in other folders)
