[metadata]
name = jaxmat
version = 0.0.1
author = Jeremy Bleyer
author_email = jeremy.bleyer@enpc.fr
description = Automated material constitutive modeling in JAX
long_description = file: README.md
keywords = material science

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    jax
    jaxlib
    equinox
    diffrax
    optimistix

